--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     compile 'com.android.support:design:23.+'
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.github.bumptech.glide:glide:$glideVersion"
-	compile 'com.google.android.gms:play-services-ads:8.4.0'
+	compile 'com.google.android.gms:play-services-ads:9.0.2'
+    compile 'com.google.firebase:firebase-core:9.0.2'
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.6.2.jar')
 }
