--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,20 @@
         <receiver android:name=".receiver.AlarmReceiver"/>
         <receiver android:name=".receiver.AlarmReceiverDeleteNews"/>
         <!-- End -->
+
+        <!-- Start Widget-->
+        <receiver android:icon="@drawable/ic_back"
+            android:label="@string/app_name"
+            android:name=".widget.WidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+        <service android:name=".widget.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+        <!-- End receiver-->
 		
 		<meta-data
             android:name="com.google.android.gms.version"
