--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion 23
         versionCode 4
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,7 +33,9 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLibVersion"
     compile "com.github.bumptech.glide:glide:$glideVersion"
 	compile 'com.google.android.gms:play-services-ads:9.0.2'
-    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.google.firebase:firebase-core:10.2.1'
+    compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.6.2.jar')
 }
