--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.+'
-    compile "com.android.support:cardview-v7:$supportLibVersion"
+     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.0.+'
     compile "com.github.bumptech.glide:glide:$glideVersion"
 	compile 'com.google.android.gms:play-services-ads:9.0.2'
     compile 'com.google.firebase:firebase-core:10.2.1'
