--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "23.0.3"
     defaultConfig {
         applicationId "com.vagad"
@@ -20,7 +20,7 @@ android {
     }
 }
 
-def supportLibVersion = "23.3.0"
+def ASUPPORT = '24.2.0'
 def glideVersion = "3.6.1"
 
 dependencies {
@@ -28,11 +28,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.0.+'
+     compile "com.android.support:appcompat-v7:$ASUPPORT"
+    compile "com.android.support:design:$ASUPPORT"
+    compile "com.android.support:cardview-v7:$ASUPPORT"
     compile "com.github.bumptech.glide:glide:$glideVersion"
-	compile 'com.google.android.gms:play-services-ads:9.0.2'
+	compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.android.support:multidex:1.0.1'
