--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".dashboard.NewsListActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".dashboard.FavListActivity"  android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".dashboard.AboutUsActivity"  android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".dashboard.HomeActivity"  android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver
             android:name=".receiver.BootReceiver"
