--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.vagad"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 5
-        versionName "1.1"
+        versionCode 7
+        versionName "1.2"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -19,9 +19,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
-def ASUPPORT = '25.2.0'
+def ASUPPORT = '25.3.0'
 def glideVersion = "3.6.1"
 
 dependencies {
@@ -34,6 +37,7 @@ dependencies {
     compile "com.android.support:cardview-v7:$ASUPPORT"
     compile "com.github.bumptech.glide:glide:$glideVersion"
 	compile 'com.google.android.gms:play-services-ads:10.2.1'
+	compile 'com.tappx.sdk.android:tappx-sdk:3.0.3'
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.android.support:multidex:1.0.1'
