--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.vagad"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 7
-        versionName "1.2"
+        versionCode 10
+        versionName "1.4"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
@@ -37,11 +37,11 @@ dependencies {
     compile "com.android.support:cardview-v7:$ASUPPORT"
     compile "com.github.bumptech.glide:glide:$glideVersion"
 	compile 'com.google.android.gms:play-services-ads:10.2.1'
-	compile 'com.tappx.sdk.android:tappx-sdk:3.0.3'
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.rubensousa:floatingtoolbar:1.4.4'
+	compile 'com.google.firebase:firebase-messaging:10.2.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.6.2.jar')
 }
