--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".dashboard.NewsListActivity"
+            android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".dashboard.FavListActivity"
@@ -95,6 +96,18 @@
         <receiver android:name=".receiver.AlarmReceiver" />
         <receiver android:name=".receiver.AlarmReceiverDeleteNews" />
         <!-- End -->
+
+        <service android:name=".fcm.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".fcm.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
 
         <!-- Start Widget-->
         <receiver
