--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -7,7 +9,7 @@ android {
         applicationId "com.vagad"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 27
+        versionCode 28
         versionName "1.8"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -22,17 +24,19 @@ android {
     lintOptions {
         checkReleaseBuilds false
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 def glideVersion = "3.6.1"
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation 'com.google.android.gms:play-services-ads:19.7.0'
@@ -43,3 +47,6 @@ dependencies {
     compile files('libs/jsoup-1.6.2.jar')
 }
 apply plugin: 'com.google.gms.google-services'
+repositories {
+    mavenCentral()
+}
